# restrictR

./: CMakeLists.txt  DESCRIPTION  NAMESPACE  README.md
R/: restrictr.R
src/: Makevars  init.c  restrictr.cpp  restrictr.h
